<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">emojidex</string>
    <string name="action_settings">Settings</string>

    <string name="search">Search</string>
    <string name="favorite">Favorites</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="left">Left</string>
    <string name="right">Right</string>

    <string name="share">Share</string>
    <string name="text_hint_emoji">You can preview or convert emoji + text here.</string>
    <string name="text_hint_text">Enter or paste text with emoji here.</string>
    <string name="clear">Clear</string>
    <string name="clear_and_paste">Clear &amp; Paste</string>
    <string name="convert">Convert</string>

    <string name="all_category">All</string>

    <string name="register_favorite">Favorite this emoji?</string>
    <string name="register_success">Registered.</string>
    <string name="register_done">Already registered.</string>
    <string name="register_failure">Registration failed.</string>
    <string name="delete_favorite">Remove this emoji from your favorites?</string>
    <string name="delete_success">Emoji removed.</string>
    <string name="delete_failure">Emoji removal failed.</string>
    <string name="delete_favorites_all">Clear favorites</string>
    <string name="delete_histories_all">Clear history</string>
    <string name="delete_favorites_all_confirm">Clear all favorites?</string>
    <string name="delete_histories_all_confirm">Clear all history?</string>
    <string name="clipboard">Copied to the clipboard.</string>
    <string name="close">Close</string>
    <string name="download_done">Already downloaded.</string>
    <string name="download_success">Downloaded.</string>
    <string name="download_failure">Downloading failed.</string>
    <string name="delete_download_confirm">Remove this emoji from your storage?</string>
    <string name="delete_download">Remove</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="keyboard_button">Keyboard settings</string>
    <string name="keyboard_button_text">Set your default keyboard here</string>
    <string name="back">Back</string>

    <string name="set">Set</string>
    <string name="cancel">Cancel</string>

    <string name="newest">Newest</string>
    <string name="popular">Popular</string>
    <string name="category">Category</string>
    <string name="emoji">Emoji</string>
    <string name="search_category">Please enter the category name you want to search.</string>
    <string name="search_emoji">Please enter the emoji name you want to search.</string>
    <string name="hit"> hits.</string>

    <!-- Japanese not needed -->
    <string name="download">Download</string>
    <string name="search_result">Search result</string>

</resources>
