<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" >

        <ImageButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/button_arrow"
            android:rotation="180"
            android:onClick="moveLeft"
            android:contentDescription="@string/left" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/button_arrow"
            android:onClick="moveRight"
            android:contentDescription="@string/right" />

    </LinearLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp"
        android:gravity="top"
        android:layout_margin="24dp"
        android:id="@+id/emoji_edittext"
        android:background="#ffffff"
        android:textColor="#000000"
        android:hint="@string/text_hint_emoji" />

</LinearLayout>