<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/settings"
        android:textSize="24dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_blank"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:gravity="left"
        android:text="@string/keyboard_button"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:onClick="setKeyboard" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:text="@string/keyboard_button_text"
        android:textColor="@color/gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_margin = "15dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_blank"
        android:padding="20dp"
        android:gravity="left"
        android:text="@string/delete_favorites_all"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:onClick="deleteAllFavorites" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_margin = "15dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_blank"
        android:padding="20dp"
        android:gravity="left"
        android:text="@string/delete_histories_all"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:onClick="deleteAllHistories" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:drawable/ic_menu_revert"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:onClick="backToMainActivity" />

</LinearLayout>