<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gray"
    android:padding="15dp" >

    <ImageView
        android:id="@+id/popup_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_white"
        android:padding="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_favorite"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_margin="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/popup_yes_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_weight="1" />
        <Button
            android:id="@+id/popup_no_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>