<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp" >

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/emojidex_logo"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name" />

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:drawable/ic_menu_preferences"
            android:contentDescription="@string/settings"
            android:layout_marginLeft="5dp"
            android:onClick="openSettings"/>

        <ImageView
            android:id="@+id/blank"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/share_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:drawable/ic_menu_share"
            android:contentDescription="@string/share"
            android:onClick="shareData"/>

        <ImageButton
            android:id="@+id/last_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/background_blank"
            android:contentDescription="@string/share"
            android:layout_marginLeft="5dp"
            android:onClick="shareDataLastSelected" />

    </LinearLayout>

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/viewFlipper_editor"
        android:layout_weight="1">

        <include android:id="@+id/emoji_text_layout" layout="@layout/emoji_text_view" />
        <include android:id="@+id/emoji_layout" layout="@layout/emoji_view" />
        <include android:id="@+id/text_layout" layout="@layout/text_view" />

    </ViewFlipper>

</LinearLayout>
